# fitos-app

./: .env.example  .firebaserc  .gitignore  .mcp.json  .nxignore  BUILD_MOBILE_APPS.md  CLAUDE.md  CLAUDE_CODE_PROMPT.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_NOW.md  ENABLE_EMAIL_VERIFICATION.md  ENABLE_EMAIL_VERIFICATION_NOW.md  GCP_FREE_TIER_ANALYSIS.md  HARD_REFRESH_AND_TEST.md  LAUNCH_CHECKLIST.md  README.md  REDEPLOY_FIXES.md  SETUP_SUPABASE_FOR_TESTING.md  START_TESTING.sh  STATUS.md  SUPABASE_FAILED_TO_FETCH_ERROR.md  SUPABASE_PROJECT_NOT_FOUND.md  TESTING_LOCALLY.md  TEST_AI_BACKEND.md  capacitor.config.ts  eslint.config.mjs  firebase.json  fix-secrets.sh  lighthouserc.json  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/ai-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  cloudbuild.yaml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
apps/ai-backend/app/: __init__.py
apps/ai-backend/app/agents/: __init__.py  a2a_agent.py  a2a_communication.py  a2a_models.py  a2a_registry.py  approval.py  coach_brain.py  coach_graph.py  motivation_agent.py  nutrition_agent.py  recovery_agent.py  specialists.py  state.py  supervisor.py  workout_agent.py
apps/ai-backend/app/auth/: __init__.py  audit_logger.py  oidc_handler.py  saml_handler.py  scim_service.py  session_manager.py  sso_config.py
apps/ai-backend/app/chronotype/: README.md  __init__.py  assessment.py  optimizer.py  templates.py
apps/ai-backend/app/core/: __init__.py  auth.py  config.py  llm.py  logging.py  rate_limit.py  usage_tracker.py
apps/ai-backend/app/franchise/: __init__.py  location_analytics.py  royalty_calculator.py
apps/ai-backend/app/habits/: __init__.py  context_notifications.py  habit_formation.py  habit_stacking.py
apps/ai-backend/app/integrations/: __init__.py  acuity.py  calendly.py  google_calendar.py  google_calendar_integration.py  myfitnesspal_integration.py  whoop_integration.py  zapier.py
apps/ai-backend/app/mcp/: README.md  __init__.py  client.py  health_server.py  stripe_server.py  tools.py
apps/ai-backend/app/nutrition_intelligence/: __init__.py  adaptation.py  chrono_nutrition.py  expenditure.py  workout_nutrition.py
apps/ai-backend/app/outcome_verification/: __init__.py  models.py  (+4 more)
apps/ai-backend/scripts/: run-tests.sh  setup.sh
apps/ai-backend/tests/: __init__.py  test_agents.py  test_routes.py
(+851 files in other folders)
